<resources>
    <string name="app_name">EcoBit</string>
    <string name="menu_home">Home</string>
    <string name="menu_locations">EcoPontos</string>
    <string name="menu_add">Doar</string>
    <string name="menu_messages">Mensagens</string>
    <string name="menu_profile">Perfil</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>