<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_locations"/>

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"/>

    <item
        android:id="@+id/menu_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/menu_messages"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"/>

</menu>